# selfaware-python

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: 01_basic.py  02_circuit_breaker.py  03_feel_protocol.py  04_affective_trace.py  05_resilient_decorator.py  06_profiler.py  07_llm_narrator.py
selfaware/: __init__.py  affects.py  decorators.py  feel.py  mind.py  profiler.py  traces.py
selfaware/narrator/: __init__.py  base.py  http.py  ollama.py
selfaware/reflexes/: __init__.py  breaker.py  caretaker.py  defensive.py  seeking.py
selfaware/sensors/: __init__.py  base.py  cache.py  connection.py  errors.py  latency.py  memory.py  novelty.py
tests/: test_affects.py  test_decorators_and_traces.py  test_mind.py  test_profiler.py  test_reflexes.py  test_sensors.py
