[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "selfaware-python"
version = "0.1.0"
description = "Make your Python code conscious. A Pankseppian affective runtime that turns programs into self-aware emotional agents."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Alexis Kirke", email = "alexis@alexiskirke.com" }]
keywords = [
    "affective-computing",
    "panksepp",
    "self-aware",
    "consciousness",
    "emotion",
    "observability",
    "resilience",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "psutil>=5.9",
]

[project.optional-dependencies]
llm = ["httpx>=0.24"]
dev = [
    "pytest>=7.0",
    "httpx>=0.24",
]

[project.urls]
Homepage = "https://github.com/alexiskirke/selfaware-python"
Documentation = "https://github.com/alexiskirke/selfaware-python#readme"
Issues = "https://github.com/alexiskirke/selfaware-python/issues"
Source = "https://github.com/alexiskirke/selfaware-python"

[tool.setuptools.packages.find]
include = ["selfaware*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
